fixed grid view on small width

--- a/explor.css
+++ b/explor.css
@@ -992,50 +992,73 @@ li:hover .listaction {
     transform: translateX(calc(max(-960px,calc(16px - 100vw)) * 3 / 4));
 } */
 
+
+.maingrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 0;
+}
+
+.mode-list .maingrid{
+    grid-template-columns: 1fr 1fr;
+}
+
+.full-width{
+    grid-column: 1 / span 4;
+}
+.mode-list .full-width{
+    grid-column: 1 / span 2;
+}
+.item.previewing .stream-holder{
+    grid-row: 0;
+}
+.item{
+    display: contents;
+    width: auto;
+    overflow: hidden;
+
+}
+
+
+
+
 @media (max-width: 839px) {
-    .item {
-        width: calc(33.33% - 16px);
+    .maingrid{
+        grid-template-columns: 1fr 1fr 1fr;
     }
-
-    .mode-list .item {
-        width: calc(100% - 16px);
+    .mode-list .maingrid{
+        grid-template-columns: 1fr;
     }
-
-    /* .mode-default .item.previewing:nth-of-type(3n-2) .stream-holder,
-    .mode-list .item.previewing:nth-of-type(n) .stream-holder{
-        transform: translateX(-0px);
+    .full-width{
+        grid-column: 1 / span 3;
     }
-    .mode-default .item.previewing:nth-of-type(3n-1) .stream-holder{
-        transform: translateX(calc((16px - 100vw) * 1 / 3));
+    .mode-list .full-width{
+        grid-column: 1 / span 1 ;
     }
-    .mode-default .item.previewing:nth-of-type(3n) .stream-holder{
-        transform: translateX(calc((16px - 100vw) * 2 / 3));
-    } */
 }
 
 @media (max-width: 559px) {
-    .item {
-        width: calc(50% - 16px);
+    .maingrid{
+        grid-template-columns: 1fr 1fr;
     }
-
-    /* .mode-default .item.previewing:nth-of-type(2n-1) .stream-holder,
-    .mode-list .item.previewing:nth-of-type(n) .stream-holder{
-        transform: translateX(-0px);
+    .mode-list .maingrid{
+        grid-template-columns: 1fr;
     }
-    .mode-default .item.previewing:nth-of-type(2n) .stream-holder{
-        transform: translateX(calc((16px - 100vw) * 1 / 2));
-    } */
+    .full-width{
+        grid-column: 1 / span 2;
+    }
+    .mode-list .full-width{
+        grid-column: 1 / span 1 ;
+    }
 }
 
-@media (max-width: 279px) {
-    .item {
-        width: calc(100% - 16px);
+@media (max-width: 359px) {
+    .maingrid{
+        grid-template-columns: 1fr;
     }
-
-    /* .mode-default .item.previewing:nth-of-type(n) .stream-holder,
-    .mode-list .item.previewing:nth-of-type(n) .stream-holder{
-        transform: translateX(-0px);
-    } */
+    .full-width{
+        grid-column: 1 / span 1;
+    }
 }
 
 
@@ -1074,27 +1097,4 @@ li:hover .listaction {
     .mediaplayer {
         height: 92px;
     }
-}
-
-.maingrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0;
-}
-
-.pathtree,
-.pagesbuttons,
-.loadspinner,
-.stream-holder,
-.lore {
-    grid-column: 1 / span 4;
-}
-.item.previewing .stream-holder{
-    grid-row: 8;
-}
-.item{
-    display: contents;
-    width: auto;
-    overflow: hidden;
-
 }
